# MyBestPhotos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_GUIDE.md  CHANGELOG.md  README.md  coding_rules.txt  config.example.toml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
docs/: README.md  code-review-2026-04-25-standard-pass.md  continuous-improvement.md  score-data-analysis.md
docs/architecture/: api-contract.md  runner-notes.md  scoring-model.md  stack-overview.md
docs/branch-intents/: 2026-04-22-audit-ingest-browse-search-scoring.md  2026-04-22-audit-nima-usage-question.md  2026-04-22-branch-intent-discipline-docs.md  2026-04-22-compose-second-pass-advanced-runner-container.md  2026-04-22-fix-app-client-runtime-install.md  2026-04-22-fix-app-server-compose-command-override.md  2026-04-22-fix-client-importmeta-env.md  2026-04-22-fix-compose-connectivity-and-startup.md  2026-04-22-fix-default-roots-env-jsondecode.md  2026-04-22-fix-docker-build-context-venv-lib64.md  2026-04-22-fix-exif-pipeline-pool-indexes.md  2026-04-22-fix-files-table-missing-existing-volume.md  2026-04-22-fix-postgres-migrations-password-auth.md  2026-04-22-fix-postgres-migrations-runner-startup.md  2026-04-22-fix-postgres-migrations-shell-host.md  2026-04-22-fix-python-runner-libgl-opencv-headless.md  2026-04-22-fix-review-actionable-items.md  2026-04-22-fix-uv-entrypoint-spawn.md  2026-04-22-foundation-stack.md  2026-04-22-implement-true-nima-library.md  2026-04-22-improve-ingest-upsert-dedup-cap.md  2026-04-22-ingest-consistency-and-db-lifecycle.md  2026-04-22-planning-ingest-browse-cleanups.md  2026-04-22-postgres-debug-cli-access.md  2026-04-22-python-runner-preflight-double-check.md  2026-04-22-python-runner-startup-gpu-cache.md  2026-04-22-restructure-services-stack.md  2026-04-22-simplify-env-photo-roots.md  2026-04-22-single-photo-ingest-root-env.md  2026-04-22-split-compose-base-and-prod-gpu-runner.md  2026-04-22-stock-schema-no-migrations.md  2026-04-22-tighten-ui-filters-and-metadata.md  2026-04-22-two-stage-ingest-advanced-nima.md  2026-04-22-ui-componentization-rules.md  2026-04-22-ui-reference-layout-upgrade.md  2026-04-22-ui-screenshot-tooling.md  2026-04-22-update-lmstudio-default-base-url-to-lan-host.md  2026-04-22-update-lmstudio-default-model-qwen3.6-35b-a3b.md  2026-04-22-validate-external-code-review.md  2026-04-23-clip-aesthetic-followup-validation.md  (+29 more)
reference/: README.md
scripts/: diagnose_scores.sql  python_runner_doctor.py
services/: instructions.txt
tests/: test_config_ingest_env_aliases.py  test_ingest_selection.py  test_llm_stage.py  test_nima_scoring.py  test_python_runner_doctor.py  test_taken_at_resolution.py
(+89 files in other folders)
