[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photo-curator"
version = "0.1.1"
description = "Local-only photo curation pipeline with Postgres + pgvector."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MyBestPhotos" }]
dependencies = [
  "opencv-python-headless",
  "exifread",
  "imagehash",
  "loguru",
  "numpy",
  "open-clip-torch",
  "pillow",
  "pyiqa",
  "psycopg[binary]",
  "psycopg-pool",
  "pgvector",
  "pydantic-settings",
  "tqdm",
  "typer",
]

[project.scripts]
photo-curator = "photo_curator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/photo_curator"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
