[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photo-curator"
version = "0.1.0"
description = "Local-only photo curation pipeline with Postgres + pgvector."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MyBestPhotos" }]
dependencies = [
  "opencv-python-headless",
  "exifread",
  "imagehash",
  "loguru",
  "numpy",
  "open-clip-torch",
  "pillow",
  "psycopg[binary]",
  "psycopg-pool",
  "pgvector",
  "pydantic-settings",
  "torch",
  "torchvision",
  "tqdm",
  "typer",
]

[project.scripts]
photo-curator = "photo_curator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/photo_curator"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[project.optional-dependencies]
cuda-linux = [
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.9.1+cu126-cp311-cp311-manylinux_2_28_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu126/torchvision-0.26.0+cu126-cp311-cp311-manylinux_2_28_x86_64.whl",
]
